syntax = "proto3";

option csharp_namespace = "AElf.Common";

message Address
{
    bytes Value = 1;
}

message Hash
{
    bytes Value = 1;
}

message SInt32Value
{
    sint32 value = 1;
}

message SInt64Value
{
    sint64 value = 1;
}

